[package]
name = "retro-game-ng"
version = "0.1.0"
authors = ["Patryk Stefanski <patryk.stefanski@protonmail.com>"]
edition = "2018"

[dependencies]
actix-http = "0.2"
actix-web = "1.0"
bcrypt = "0.4"
bitflags = "1.1"
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
futures = "0.1"
lazy_static = "1.3"
maud = "0.20"
r2d2 = "0.8"
regex = "1.1"
serde = "1.0"
toml = "0.5"
