[package]
name = "retro-game-ng"
version = "0.1.0"
authors = ["Patryk Stefanski <patryk.stefanski@protonmail.com>"]
edition = "2018"

[dependencies]
actix-http = "1.0"
actix-rt = "1.0"
actix-service = "1.0"
actix-session = "0.3"
actix-web = "2.0"
bcrypt = "0.6"
bitflags = "1.2"
chrono = "0.4"
diesel = { version = "1.4", features = ["chrono", "postgres", "r2d2", "uuid"] }
enum-map = "0.6"
env_logger = "0.7"
futures = "0.3"
lazy_static = "1.4"
log = { version = "0.4", features = ["release_max_level_info"] }
maud = "0.21"
num-derive = "0.3"
num-traits = "0.2"
r2d2 = "0.8"
rand = "0.7"
rand_distr = "0.2"
regex = "1.3"
serde = "1.0"
toml = "0.5"
uuid = { version = "0.6", features = ["serde", "v4"] }
